--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "homepage": "https://github.com/LambdaSchool/node-api-challenge#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.0.0",
     "knex": "^0.21.2",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "knex-cleaner": "^1.3.0",
     "nodemon": "^2.0.4"
   }
